Address white space bug in detail view on landscape mode in Android

--- a/sidecar/extensions/nomad/css/bootstrap-mobile.css
+++ b/sidecar/extensions/nomad/css/bootstrap-mobile.css
@@ -4335,6 +4335,7 @@ h3.nomad {
 .bizcard {
   position: fixed;
   top: 46px;
+  left: 0;
   width: 100%;
   z-index: 1000;
   min-height: 70px;
