--- a/sidecar/extensions/nomad/less/sugarmobile.less
+++ b/sidecar/extensions/nomad/less/sugarmobile.less
@@ -643,6 +643,7 @@ text-shadow: 0 -1px 0 @black;
 .bizcard {
   position: fixed;
   top: 46px;
+  left: 0;
   width: 100%;
   z-index: 1000;
   min-height: 70px;
